# cursedv

./: Cargo.toml  README.md
builds/android/armv7/: cursedv
builds/android/i686/: cursedv
src/: command.rs  commands.rs  config.rs  consts.rs  main.rs  sys.rs
